finalized preliminary jupyter notebooks for appendix

--- a/notebooks/2b_NonLinearSimulation_strong.ipynb
+++ b/notebooks/2b_NonLinearSimulation_strong.ipynb
@@ -98,7 +98,7 @@
     "p = 3\n",
     "V = cmp._gram_schmidt_basis(p)\n",
     "instrument_strength = \"strong\"\n",
-    "mypath = os.path.join(img_path, \"NonLinearSetUp\")\n",
+    "savepath = os.path.join(img_path, \"NonLinearSetUp\")\n",
     "num_inst = 2\n",
     "c_X = np.array([2, 2])  # confounder multiplication to X\n",
     "alpha0 = np.array([1, 1])  # INSTRUMENT intercept\n",
@@ -1718,7 +1718,7 @@
     "fig = update_layout_px(fig)\n",
     "fig.update_xaxes(title=\"Sample number\")\n",
     "fig.update_yaxes(title=\"Percentage of microbiota in sample\")\n",
-    "fig.write_image(os.path.join(mypath,\n",
+    "fig.write_image(os.path.join(savepath,\n",
     "                             \"Barplot_Sample_\" +str(p)+\"InstrumentStrength_\"+str(instrument_strength)+\".pdf\" ))\n",
     "fig.show()"
    ]
@@ -6740,7 +6740,7 @@
     "\n",
     "fig = update_layout_px(fig)\n",
     "#ig.update_layout(gridcolor=\"gray\")\n",
-    "fig.write_image(os.path.join(mypath,\n",
+    "fig.write_image(os.path.join(savepath,\n",
     "                             \"Ternaryplot_SampleZ1_\" +str(p)+\"InstrumentStrength_\"+str(instrument_strength)+\".pdf\" ))\n",
     "fig.show()"
    ]
@@ -11732,7 +11732,7 @@
     "                         color=Z_sim[:, 1].squeeze())\n",
     "\n",
     "fig = update_layout_px(fig)\n",
-    "fig.write_image(os.path.join(mypath,\n",
+    "fig.write_image(os.path.join(savepath,\n",
     "                             \"Ternaryplot_SampleZ2_\" +str(p)+\"InstrumentStrength_\"+str(instrument_strength)+\".pdf\" ))\n",
     "\n",
     "fig.show()"
@@ -19710,7 +19710,7 @@
    "source": [
     "fig = plot_ilr_X_vs_Y(X_sim_ilr, Y_sim, Y_star)\n",
     "\n",
-    "fig.write_image(os.path.join(mypath,\n",
+    "fig.write_image(os.path.join(savepath,\n",
     "                             \"Data_vs_trueeffect_\" +str(p)+\"InstrumentStrength_\"+str(instrument_strength)+\".pdf\" ))\n",
     "\n",
     "fig.show()"
@@ -24932,7 +24932,7 @@
     "    Z_sim, div_shannon, Y_sim, Ytrue=Y_star, methods=[\"OLS\", \"2SLS\", \"KIV\"])\n",
     "\n",
     "fig = plot_diversity_methods(x, y, xstar, xstar_bound, ystar_ols, ystar_2sls, ystar_kiv, results, ytrue)\n",
-    "fig.write_image(os.path.join(mypath,\n",
+    "fig.write_image(os.path.join(savepath,\n",
     "                             \"ShannonDiversity_\" +str(p)+\"InstrumentStrength_\"+str(instrument_strength)+\".pdf\" ))\n",
     "\n",
     "fig.show()"
@@ -30134,7 +30134,7 @@
     "    Z_sim, div_simpson, Y_sim, Ytrue=Y_star, methods=[\"OLS\", \"2SLS\", \"KIV\"])\n",
     "\n",
     "plot_diversity_methods(x, y, xstar, xstar_bound, ystar_ols, ystar_2sls, ystar_kiv, results, ytrue)\n",
-    "fig.write_image(os.path.join(mypath,\n",
+    "fig.write_image(os.path.join(savepath,\n",
     "                             \"SimpsonDiversity_\" +str(p)+\"InstrumentStrength_\"+str(instrument_strength)+\".pdf\" ))\n",
     "\n",
     "fig.show()"
@@ -35306,7 +35306,7 @@
     "    \"mse_large\": mse_large_confidence\n",
     "}\n",
     "\n",
-    "with open(os.path.join(mypath, \"results_\"+str(p)+str(instrument_strength)+\".pickle\"), \"wb\") as f:\n",
+    "with open(os.path.join(savepath, \"results_\"+str(p)+str(instrument_strength)+\".pickle\"), \"wb\") as f:\n",
     "    pickle.dump(results, f)\n",
     "    f.close()\n"
    ]
@@ -36461,7 +36461,7 @@
     "\n",
     "fig = plot_mse_results(df_mse, filter_list)\n",
     "fig.update_yaxes(range=(0, 100))\n",
-    "fig.write_image(os.path.join(mypath,\n",
+    "fig.write_image(os.path.join(savepath,\n",
     "                             \"MSEFull_\" +str(p)+\"InstrumentStrength_\"+str(instrument_strength)+\".pdf\" ))\n",
     "fig.show()"
    ]
@@ -38214,7 +38214,7 @@
     "))\n",
     "\n",
     "fig.update_yaxes(range=(-20, 40))\n",
-    "fig.write_image(os.path.join(mypath,\n",
+    "fig.write_image(os.path.join(savepath,\n",
     "                             \"BetaFull_\" +str(p)+\"InstrumentStrength_\"+str(instrument_strength)+\".pdf\" ))\n",
     "\n",
     "fig.show()\n"
